
syntax = "proto3";

package custom_scalar;

message Msg {
  string a = 1;
  repeated string b = 2;
  optional string c = 3;
  oneof my_enum {
    string d = 4;
  };
  map<string, string> e = 5;
  map<string, string> f = 6;
  map<string, string> g = 7;
  bytes h = 8;
}
