// From https://github.com/danburkert/prost/issues/118

syntax = "proto2";

package default_enum_value;

enum PrivacyLevel {
  PRIVACY_LEVEL_ONE = 1;
  PRIVACY_LEVEL_TWO = 2;
  PRIVACY_LEVEL_PRIVACY_LEVEL_THREE = 3;
  PRIVACY_LEVELPRIVACY_LEVEL_FOUR = 4;
}

message Test {
  optional PrivacyLevel privacy_level_1 = 1 [default = PRIVACY_LEVEL_ONE];
  optional PrivacyLevel privacy_level_3 = 2 [default = PRIVACY_LEVEL_PRIVACY_LEVEL_THREE];
  optional PrivacyLevel privacy_level_4 = 3 [default = PRIVACY_LEVELPRIVACY_LEVEL_FOUR];
}

// danburkert/prost#310
enum ERemoteClientBroadcastMsg {
    k_ERemoteClientBroadcastMsgDiscovery = 0;
}
message CMsgRemoteClientBroadcastHeader {
    optional ERemoteClientBroadcastMsg msg_type = 2 [default = k_ERemoteClientBroadcastMsgDiscovery];
}
