syntax = "proto3";

package enum_keyword_variant;

enum Feeding {
  FEEDING_UNSPECIFIED = 0;
  FEEDING_ASSISTED = 1;
  // Careful: code generation resulted in "Self". Now it is "Self_".
  FEEDING_SELF = 2;
  FEEDING_ELSE = 3;
  FEEDING_ERROR = 4;
  FEEDING_GEN = 5;
}

enum Grooming {
  UNSPECIFIED = 0;
  ASSISTED = 1;
  SELF = 2;
  ELSE = 3;
}

enum Number {
  NUMBER_UNSPECIFIED = 0;
  NUMBER_1 = 1;
}
