syntax = "proto3";

package type_names;

message Foo {
    message Bar {
    }
}

message Baz {
}

message Qux {
}
